# constella

./: .cursorrules  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/index/: .managed.json  meta.json
src-tauri/src/: lib.rs  main.rs  scanner.rs
src-tauri/src/api/: commands.rs  mod.rs
src-tauri/src/benchmarking/: mod.rs
src-tauri/src/file_system/: mod.rs
src-tauri/src/indexing/: mod.rs  new_mod.rs  temp.rs  temp_status.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/tracking/: diff.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/indexing/: directory-indexer.tsx  indexing-progress.tsx
src/components/search/: search-interface.tsx
src/components/ui/: calendar.tsx  sidebar.tsx  toaster.tsx
src/hooks/: use-toast.ts
src/lib/: types.ts  utils.ts
src/lib/services/: indexing-service.ts
