[package]
name = "constella"
version = "0.1.0"
description = "A modern file system search tool"
authors = ["Byron Wade"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "path-all", "shell-open", "dialog-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tantivy = { version = "0.19.2", default-features = false, features = ["mmap"] }
walkdir = "2.4.0"
rayon = "1.8.0"
futures = "0.3.29"
mime_guess = "2.0.4"
env_logger = "0.10.1"
log = "0.4.20"

[features]
custom-protocol = ["tauri/custom-protocol"]

