[package]
name = "constella"
version = "0.1.0"
description = "A modern file system search tool"
authors = ["Byron Wade"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["fs-all", "path-all", "shell-open", "dialog-all", "window-all"] }
tokio = { version = "1.34.0", features = ["full"] }
tantivy = { version = "0.19.2", features = ["mmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
chrono = "0.4"
walkdir = "2.4"
mime_guess = "2.0"
rayon = "1.8.0"
futures = "0.3.29"
zstd-safe = "5.0.2"
num_cpus = "1.16"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

