[package]
name = "constella"
version = "0.1.0"
description = "Fast file search and indexing"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["dialog-all", "shell-open", "fs-all", "path-all", "window-all"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tantivy = "0.21.1"
walkdir = "2.4.0"
log = "0.4.20"
env_logger = "0.10.1"
mime_guess = "2.0.4"
chrono = "0.4.31"
rayon = "1.8.0"
num_cpus = "1.16.0"
futures = "0.3.29"
sysinfo = "0.29.10"
memmap2 = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12.1"
dashmap = "5.5.3"
crossbeam-utils = "0.8.16"
crossbeam-deque = "0.8.3"
async-walkdir = "0.2.0"
ignore = "0.4.21"
zstd-safe = "=5.0.2"
zstd-sys = "=2.0.8+zstd.1.5.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.50.0"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true # Remove debug symbols

[package.metadata.tauri.bundle]
webview_install_mode = "skip"
webview_fixed_runtime_path = "../WebView2"

